ingress/ingress-path-base-routing.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: handson
  labels:
    name: handson
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress-by-nginx
  namespace: handson
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /a(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: sample-clusterip-a
                port:
                  number: 80
          - path: /b(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: sample-clusterip-b
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sample-clusterip-a
  namespace: handson
spec:
  type: ClusterIP
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: sample-app-a
---
apiVersion: v1
kind: Service
metadata:
  name: sample-clusterip-b
  namespace: handson
spec:
  type: ClusterIP
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 80
      targetPort: 80
  selector:
    app: sample-app-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment-a
  namespace: handson
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-app-a
  template:
    metadata:
      labels:
        app: sample-app-a
    spec:
      containers:
        - name: nginx
          image: hokekyo1210/nginx-echoip:v1
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-deployment-b
  namespace: handson
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-app-b
  template:
    metadata:
      labels:
        app: sample-app-b
    spec:
      containers:
        - name: nginx
          image: hokekyo1210/nginx-echoip:v1
          ports:
            - containerPort: 80
